--- a/python_dsa_bin_search_sorted_list.ipynb
+++ b/python_dsa_bin_search_sorted_list.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMpKf6F0TC3mLHQT6xNH7fd",
+      "authorship_tag": "ABX9TyNsP9qXgdJU2cUkhdSpXvRA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "lKBA-yLzrX-G"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -86,7 +86,7 @@
       "metadata": {
         "id": "mDpSccwirX4E"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -105,7 +105,7 @@
         "id": "RTnHLeZRrX1G",
         "outputId": "5b41af65-bd01-4f08-d6d7-59ed3256908d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +140,7 @@
       "metadata": {
         "id": "B3XPgGvUrXyM"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -170,7 +170,7 @@
       "metadata": {
         "id": "3Bgpdr73rXvc"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -187,7 +187,7 @@
         "id": "lwA98nwirXi-",
         "outputId": "54cf4ff1-5519-49d5-e458-c5c1224a9b03"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,7 +240,7 @@
       "metadata": {
         "id": "VzClavf09Ypc"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -258,7 +258,7 @@
         "id": "MVulne6Q9YmI",
         "outputId": "e9e267a4-eebf-470b-c911-47fb66d7f25a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -310,7 +310,7 @@
       "metadata": {
         "id": "puUer1u19Yi-"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -326,7 +326,7 @@
         "id": "ufhGZW5K9YJU",
         "outputId": "b9d22264-fd00-401f-dafe-651881997ba7"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -383,7 +383,7 @@
       "metadata": {
         "id": "D4ppf4d9Bq2o"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -400,7 +400,7 @@
         "id": "40XyrlBGBqzo",
         "outputId": "4f255bc7-a75f-4326-9890-ca4a594373a0"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -449,7 +449,7 @@
       "metadata": {
         "id": "z1c28l9lBqw1"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -464,7 +464,7 @@
         "id": "xvmjcy6IBquI",
         "outputId": "ebad697d-e834-47f2-e60f-797f686f3478"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,28 +511,28 @@
       "metadata": {
         "id": "LFqzIR0VBqrS"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "search_binary_sorted_list_mod([10,9,8,7,6,5,4,3,2,1], 7)"
+        "search_binary_sorted_list_mod([10,9,8,7,6,5,4,3,2,1,0], 0)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pgKqqXxZBqoe",
-        "outputId": "33db31ec-dae2-4ac0-8881-bc832485a6ba"
+        "outputId": "d35ef975-1e8e-4650-994a-6809955889c3"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "left side\n",
+            "right side\n",
             "right side\n"
           ]
         },
@@ -540,13 +540,255 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "3"
+              "10"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = [10,10,9,8,7,6,6,6,6,5,4,3,2,1,1,1,1,1]\n",
+        "a.index(10), a.count(10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ytPepGXPIKGM",
+        "outputId": "daf7fc08-140b-4aca-81e4-cff56a058fc8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0, 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def test_location(cards, find, mid):\n",
+        "  # returns left right found\n",
+        "\n",
+        "  mid_number = cards[mid]\n",
+        "  if mid_number == find:\n",
+        "    # could be single instance or could be duplicate\n",
+        "    if (mid-1) >=0 and cards[mid] == cards[mid-1]:\n",
+        "      return 'left'\n",
+        "    else:\n",
+        "      return 'found'\n",
+        "  elif mid_number <= find:\n",
+        "    return 'left'\n",
+        "  elif mid_number >= find:\n",
+        "    return 'right'"
+      ],
+      "metadata": {
+        "id": "SWvbi0QzIKDa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def bin_search_sorted_with_dup(cards, find):\n",
+        "  start, end = 0, len(cards) - 1\n",
+        "\n",
+        "  while start <= end:\n",
+        "    mid = (start + end) // 2\n",
+        "    result = test_location(cards, find, mid)\n",
+        "\n",
+        "    if result == 'found':\n",
+        "      return mid\n",
+        "    elif result == 'right':\n",
+        "      start = mid + 1\n",
+        "    elif result == 'left':\n",
+        "      end = end - 1\n",
+        "\n",
+        "  return -1\n"
+      ],
+      "metadata": {
+        "id": "FAcELdKrIKAu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bin_search_sorted_with_dup([10,9,8,7,6,5,4,3,2,1], 10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4HqYkHkvIJ9R",
+        "outputId": "a104d5a3-34a2-4b47-a008-121fb5a21799"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def search_sorted_list(cards,find):\n",
+        "  start, end = 0, len(cards)\n",
+        "  while start <= end:\n",
+        "    mid = (start + end) // 2\n",
+        "    mid_value = cards[mid]\n",
+        "    if mid_value == find:\n",
+        "      print(f\"found at {mid}\")\n",
+        "      return mid\n",
+        "    elif mid_value <= find:\n",
+        "      print(\"left side\")\n",
+        "      end = mid - 1\n",
+        "    elif mid_value >= find:\n",
+        "      print(\"right side\")\n",
+        "      start = mid + 1\n",
+        "\n",
+        "  print(\"not found\")\n",
+        "  return -1\n"
+      ],
+      "metadata": {
+        "id": "IYfYd_9QzCNO"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "search_sorted_list([10,9,9,9,8,7,6,5,4,3,2,1],9)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f-XXvEVbzCKG",
+        "outputId": "83f6cc72-4963-44b6-b116-d796c5c242ea"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "left side\n",
+            "found at 2\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def find_location(cards, find, mid):\n",
+        "  if cards[mid] == find:\n",
+        "    if cards[mid] == cards[mid-1] and (mid-1) >= 0:\n",
+        "      return 'left'\n",
+        "    else:\n",
+        "      return 'found'\n",
+        "  elif cards[mid] <= find:\n",
+        "    return 'left'\n",
+        "  elif cards[mid] >= find:\n",
+        "    return 'right'"
+      ],
+      "metadata": {
+        "id": "5NKdWWemzCHN"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def search_bin_sort_list(cards, find):\n",
+        "  start, end = 0, len(cards)-1\n",
+        "  while start <= end:\n",
+        "    mid = (start + end) // 2\n",
+        "    result = find_location(cards, find, mid)\n",
+        "    if result == 'found':\n",
+        "      return mid\n",
+        "    elif result == 'left':\n",
+        "      end = mid - 1\n",
+        "    elif result == 'right':\n",
+        "      start = mid + 1\n",
+        "\n",
+        "  return -1\n",
+        ""
+      ],
+      "metadata": {
+        "id": "7N2K6Ym0zCD8"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "search_bin_sort_list([9,8,8,8,7,6,5,4,3,2,1], 8)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ygCKvZtyzCA8",
+        "outputId": "842df748-e856-4104-bdb8-e910f6089705"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
             ]
           },
           "metadata": {},
           "execution_count": 15
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "28ZFS5RYzB94"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
