--- a/rotate_sorted_list.ipynb
+++ b/rotate_sorted_list.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOnEFpg8ASVqGtJPavb4GPS",
+      "authorship_tag": "ABX9TyPpxeUFOmN+FWwv0giuSGpr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -415,7 +415,7 @@
       "metadata": {
         "id": "3V1IE1OqSyxq"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -430,7 +430,7 @@
         "id": "DkpvIOdXEYU5",
         "outputId": "dc864572-8697-4da9-d356-0e31a86dda02"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,7 +469,7 @@
         "id": "_Y6xWfu3EYSW",
         "outputId": "4f5e2d64-4e3c-43eb-b22a-fd8bba87d393"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -518,7 +518,7 @@
       "metadata": {
         "id": "9jQ4HpVtEYO_"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -544,7 +544,7 @@
         "id": "U6-qLZNEEYMP",
         "outputId": "3471c78e-48f8-45d8-d7ae-624024297623"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -594,7 +594,7 @@
       "metadata": {
         "id": "_GxlFcK5EX0s"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -609,7 +609,7 @@
         },
         "outputId": "0bd013d4-4ffa-473d-ac86-c993a3c8a616"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -650,7 +650,7 @@
         "id": "urHHxr0oWE39",
         "outputId": "e3cae9ef-8c5e-44fe-913f-34521af040e7"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -696,7 +696,7 @@
       "metadata": {
         "id": "bK3t0nWXWE0c"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -711,7 +711,7 @@
         "id": "Fg6iNDJ1WExX",
         "outputId": "866bf874-4167-49d1-ab6d-e1885574d3b2"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -773,7 +773,7 @@
       "metadata": {
         "id": "WXNu72epWEuT"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -788,7 +788,7 @@
         "id": "CauckqP4WErh",
         "outputId": "bf3cb031-7ced-41b6-a7f4-2e4fe2275575"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -812,21 +812,76 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def bin_search_rotated_sort_list(nums, target):\n",
+        "  start, end = 0, len(nums)-1\n",
+        "\n",
+        "  while start < end:\n",
+        "    mid = start + (end-start) // 2\n",
+        "    #mid_value = nums[mid]\n",
+        "    print(f\"start is {start} end is {end} mid is {mid}\")\n",
+        "    if nums[mid] == target:\n",
+        "      return mid\n",
+        "    if nums[start] <=  nums[mid]:\n",
+        "      print(\"left side is sorted\")\n",
+        "      if nums[start] <= target and target < nums[mid]:\n",
+        "        end = mid\n",
+        "      else:\n",
+        "        start = mid+1\n",
+        "    else:\n",
+        "      print(\"right side is sorted\")\n",
+        "      if nums[mid] < target and target <= nums[end-1]:\n",
+        "        start = mid + 1\n",
+        "      else:\n",
+        "        end = mid\n",
+        "\n",
+        "  print(\"Not found\")\n",
+        "  return -1"
+      ],
       "metadata": {
         "id": "jtkwloXOWEon"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "bin_search_rotated_sort_list([7,8,9,1,2,3,4,5,6], 6)"
+      ],
       "metadata": {
-        "id": "KC-S-osKWElp"
+        "id": "KC-S-osKWElp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1d7eda23-14e1-4f33-9e66-4d4edcc0227d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "start is 0 end is 8 mid is 4\n",
+            "right side is sorted\n",
+            "start is 0 end is 4 mid is 2\n",
+            "left side is sorted\n",
+            "start is 3 end is 4 mid is 3\n",
+            "left side is sorted\n",
+            "Not found\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     },
     {
       "cell_type": "code",
