--- a/recursive_code_python.ipynb
+++ b/recursive_code_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyObQL+eATudusKlJDkKBJ78",
+      "authorship_tag": "ABX9TyO6Vt1Re7/b5xsVDVh60DbU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -173,21 +173,101 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# function to count num of ways you can partition n objects uing parts upto m (m >=0)\n",
+        "'''\n",
+        "n = 1,2,3,4,5,6\n",
+        "m - 1,1,1\n",
+        "\n",
+        "1 2 3 +++ 4 5 6 (3,3)\n",
+        "1 2 +++ 3 4 +++ 5 6 (2,2,2)\n",
+        "1 2 +++ 3 4 5 6 (2,3,1)\n",
+        "(2,3,1)\n",
+        "(1 1 1 1 1 1)\n",
+        "(2 1 1 2)\n",
+        "(2 1 1 1 1)\n",
+        "\n",
+        "\n",
+        "if m = 0 count =\n",
+        "if m == 1 count = len(n)\n",
+        "\n",
+        "n = 1,2,3,4,5\n",
+        "m = 1,2\n",
+        "\n",
+        "1,2 ++ 3,4,5\n",
+        "1,2,3 ++ 4,5\n",
+        "\n",
+        "n = 1,2,3,4,5,6,7\n",
+        "m = 1,2\n",
+        "\n",
+        "1,2 ++ 3,4,5,6,7\n",
+        "1,2,3 ++ 4,5\n",
+        "\n",
+        "count_partition(0,0) -> 1\n",
+        "count_partition(0,1) -> 1\n",
+        "count_partition(0,2) -> 1\n",
+        "\n",
+        "if n = 0, count = 1\n",
+        "\n",
+        "count_partition(1,0) -> 0\n",
+        "count_partition(2,1) -> 0\n",
+        "count_partition(3,2) -> 0\n",
+        "\n",
+        "if m = 0 then count = 0\n",
+        "\n",
+        "count_partition(n, m) -> 1 if n == 0\n",
+        "count_partition(n, m) -> 0 if m == 0\n",
+        "\n",
+        "'''"
+      ],
       "metadata": {
-        "id": "-YrWcVLB4Y8_"
+        "id": "ZekFZJPA4YxN"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def count_partition(n, m):\n",
+        "  if n == 0:\n",
+        "    return 1\n",
+        "  elif m == 0 or n < 0:\n",
+        "    return 1\n",
+        "  else:\n",
+        "    return count_partition(n - m, m) + count_partition(n, m-1)"
+      ],
       "metadata": {
-        "id": "ZekFZJPA4YxN"
+        "id": "OW3V1P_y_sFx"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "count_partition(3,2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tP0XqdjW_r8p",
+        "outputId": "0470dd06-e938-491a-b2aa-14a6e0182e7c"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     }
   ]
 }
