--- a/codility_dsa.ipynb
+++ b/codility_dsa.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOzzIGcQotdc7KYRZSgAc3d",
+      "authorship_tag": "ABX9TyNScwz+oIbt8kJ+tgk9csKp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -689,7 +689,7 @@
         },
         "outputId": "86e74645-8e49-46df-d8b6-447f657edff2"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -718,7 +718,7 @@
         "id": "AltcLEKGuBHC",
         "outputId": "f26d6b76-9f37-408c-89e6-5d63da9f723b"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -777,7 +777,7 @@
         },
         "outputId": "f9b72728-5bf9-4a4a-b9f0-76f047db88a5"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -840,7 +840,7 @@
         },
         "outputId": "9ff83e9b-82a0-4be1-eac7-b8fe96db7fb9"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -901,7 +901,7 @@
         },
         "outputId": "271f7ae7-730a-4482-a9fd-55e75e39c674"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -946,7 +946,7 @@
       "metadata": {
         "id": "1VPydiNEKRNJ"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -961,7 +961,7 @@
         "id": "pk9xtF0X3caf",
         "outputId": "577d0250-cb7c-410e-eec7-ecf1a7ce9bac"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1032,7 +1032,7 @@
       "metadata": {
         "id": "4Wk4sLdD3c64"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1047,7 +1047,7 @@
         "id": "PmjOsa_r3dyp",
         "outputId": "25d1f42b-22b9-4ca0-9a1e-f0778c43afe4"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1094,7 +1094,7 @@
       "metadata": {
         "id": "G-7MJPKu3dvR"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1121,7 +1121,7 @@
       "metadata": {
         "id": "_Fs9JS203dsj"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1158,7 +1158,7 @@
       "metadata": {
         "id": "v1MJLOdn3dp1"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1173,7 +1173,7 @@
         "id": "WEJOlTbR3dm-",
         "outputId": "6923b7d1-f268-4d72-d5a7-c6373b41c679"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1221,7 +1221,7 @@
       "metadata": {
         "id": "NnOlnqep3dj_"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1236,7 +1236,7 @@
         "id": "NkL0wU5H3dhS",
         "outputId": "d3263d45-5f81-4c45-d630-0556dd3a9119"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1251,10 +1251,214 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "MinAvgTwoSlice"
+      ],
+      "metadata": {
+        "id": "CqW7ZMPIkw5C"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# you can write to stdout for debugging purposes, e.g.\n",
+        "# print(\"this is a debug message\")\n",
+        "\n",
+        "def MinAvgTwoSlice(A):\n",
+        "  smallest_avg = (A[0] + A[1])/2.0\n",
+        "  smallest_idx = 0\n",
+        "  for idx in range(0,len(A)-2):\n",
+        "    new_avg2 = (A[idx] + A[idx+1])/2.0\n",
+        "    # checking 2 elements average\n",
+        "    if smallest_avg > new_avg2:\n",
+        "      # print(\"smallest_avg > new_avg2:\")\n",
+        "      smallest_avg = new_avg2\n",
+        "      smallest_idx = idx\n",
+        "    new_avg3 = (A[idx] + A[idx+1] + A[idx+2])/3.0\n",
+        "    # checking 2 elements average\n",
+        "    if smallest_avg > new_avg3:\n",
+        "      # print(\"smallest_avg > new_avg3:\")\n",
+        "      smallest_avg = new_avg3\n",
+        "      smallest_idx = idx\n",
+        "  new_avg_last2 = (A[-1]+A[-2])/2.0\n",
+        "\n",
+        "  if smallest_avg > new_avg_last2:\n",
+        "    # print(\"smallest_avg > new_avg_last2:\")\n",
+        "    smallest_avg = new_avg_last2\n",
+        "    smallest_idx = len(A)-2\n",
+        "\n",
+        "  return smallest_idx"
+      ],
+      "metadata": {
+        "id": "GQpjlTOd3deT"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "MinAvgTwoSlice([1,2,4,5,6,7,8,9])"
+      ],
+      "metadata": {
+        "id": "kCobdi1h3dBe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "52e9ead2-c37a-4a3f-cbcb-321e1bdf032d"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "MaxProductOfThree"
+      ],
+      "metadata": {
+        "id": "F9uzFFfz8xCt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# you can write to stdout for debugging purposes, e.g.\n",
+        "# print(\"this is a debug message\")\n",
+        "\n",
+        "def MaxProductOfThree(A):\n",
+        "    A.sort()\n",
+        "    last3_product = A[-1] * A[-2] * A[-3]\n",
+        "\n",
+        "    first2_last_prod = 0\n",
+        "\n",
+        "    if A[0] < 0 and A[1] < 0:\n",
+        "        first2_last_prod = A[0] * A[1] * A[-1]\n",
+        "\n",
+        "    return(max(last3_product, first2_last_prod))"
+      ],
+      "metadata": {
+        "id": "5109IHG1lFGI"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "MaxProductOfThree([-3,-2,0,4,5,6,7])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AYA3RsV1lFC6",
+        "outputId": "38946761-c830-479d-89c8-55877db192e0"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "210"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "MaxProductOfThree([10,10,10])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q2iUqMselE_w",
+        "outputId": "1d51fbbe-4941-42b5-e4fa-b0393cb7031b"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1000"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'''\n",
+        "A[i+2] + A[i+1] > A[i]\n",
+        "A[i+2] + A[i] > A[i+1]\n",
+        "A[i+1] + A[i] > A[i+2]\n",
+        "\n",
+        "'''\n",
+        "def triangle(A):\n",
+        "  A.sort()\n",
+        "  for i in range(0,len(A)-2):\n",
+        "    if A[i+1] + A[i] > A[i+2]:\n",
+        "      return 1\n",
+        "  return 0"
+      ],
+      "metadata": {
+        "id": "n1GvmEyXlE8y"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "triangle([10, 2, 5, 1, 8, 20])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DyS8SVPAKphx",
+        "outputId": "969d1992-fdea-4efc-ef9e-32461c537540"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "GQpjlTOd3deT"
+        "id": "wXJgtK3bKpeq"
       },
       "execution_count": null,
       "outputs": []
@@ -1263,7 +1467,25 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "kCobdi1h3dBe"
+        "id": "a7BjRdx_Kpbg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "BWjAqC3aKpYo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "NAXajXfiKpNw"
       },
       "execution_count": null,
       "outputs": []
