--- a/codility_dsa.ipynb
+++ b/codility_dsa.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNScwz+oIbt8kJ+tgk9csKp",
+      "authorship_tag": "ABX9TyMesAT4fTNMeHtaB/nMTM2N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1293,7 +1293,7 @@
       "metadata": {
         "id": "GQpjlTOd3deT"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1308,7 +1308,7 @@
         },
         "outputId": "52e9ead2-c37a-4a3f-cbcb-321e1bdf032d"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1351,7 +1351,7 @@
       "metadata": {
         "id": "5109IHG1lFGI"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1366,7 +1366,7 @@
         "id": "AYA3RsV1lFC6",
         "outputId": "38946761-c830-479d-89c8-55877db192e0"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1392,7 +1392,7 @@
         "id": "q2iUqMselE_w",
         "outputId": "1d51fbbe-4941-42b5-e4fa-b0393cb7031b"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1425,7 +1425,7 @@
       "metadata": {
         "id": "n1GvmEyXlE8y"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1440,7 +1440,7 @@
         "id": "DyS8SVPAKphx",
         "outputId": "969d1992-fdea-4efc-ef9e-32461c537540"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1455,29 +1455,258 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "NumberOfDiscIntersections"
+      ],
+      "metadata": {
+        "id": "h__F1RsJTLG1"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def NumberOfDiscIntersections(A):\n",
+        "  iCount = 0\n",
+        "  for center in range(0,len(A)-1):\n",
+        "    # print(f\"center is {center} ---------\")\n",
+        "    for i in range(center, len(A)-1):\n",
+        "      if center+A[center] > i-A[i+1]:\n",
+        "        iCount +=1\n",
+        "      if iCount >  10000000:\n",
+        "        return -1\n",
+        "  return iCount"
+      ],
       "metadata": {
         "id": "wXJgtK3bKpeq"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "NumberOfDiscIntersections([1,4,8,2,6,10])"
+      ],
       "metadata": {
-        "id": "a7BjRdx_Kpbg"
+        "id": "a7BjRdx_Kpbg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aaea1cee-1b3a-4f75-8900-8cc9373594a9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def NumberOfDiscIntersections100(A):\n",
+        "  from collections import defaultdict\n",
+        "\n",
+        "  # a = [1, 5, 2, 1, 4, 0]\n",
+        "\n",
+        "  start = defaultdict(int)\n",
+        "  stop = defaultdict(int)\n",
+        "\n",
+        "  for i in range(len(A)):\n",
+        "      start[i - A[i]] += 1\n",
+        "      stop[i + A[i]] += 1\n",
+        "\n",
+        "  active = 0\n",
+        "  intersections = 0\n",
+        "  for i in range(-len(A), len(A)):\n",
+        "      intersections += active * start[i] + (start[i] * (start[i] - 1)) / 2\n",
+        "      active += start[i]\n",
+        "      active -= stop[i]\n",
+        "\n",
+        "  return intersections"
+      ],
       "metadata": {
         "id": "BWjAqC3aKpYo"
       },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "NumberOfDiscIntersections100([1,4,8,2,6,10])"
+      ],
+      "metadata": {
+        "id": "NAXajXfiKpNw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "002209ba-1918-4bb9-d453-fd3a97030882"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def Brackets(S):\n",
+        "  sdict = { '{':1, '(':2, '[':3, ']':-3, ')':-2, '}':-1 }\n",
+        "  # if S[0] is negative not nested\n",
+        "  # add val to vector when you get positive\n",
+        "  # when comes negative, match with vector[-1], if same cutoff\n",
+        "  # if not same NOT NESTED\n",
+        "  if len(S) == 0:\n",
+        "    return 1\n",
+        "  if sdict[S[0]] < 0:\n",
+        "    return 0\n",
+        "\n",
+        "  vector = []\n",
+        "  for i in range(0,len(S)):\n",
+        "    val = sdict[S[i]]\n",
+        "    # print(f\"char is {S[i]} and val is {val}\")\n",
+        "    if val > 0:\n",
+        "      vector.append(val)\n",
+        "    elif len(vector) == 0:\n",
+        "      return 0\n",
+        "    else:\n",
+        "      if abs(val) != abs(vector[-1]):\n",
+        "        return 0\n",
+        "      else:\n",
+        "        vector.pop(-1)\n",
+        "  if len(vector) == 0:\n",
+        "    return 1\n",
+        "  else:\n",
+        "    return 0"
+      ],
+      "metadata": {
+        "id": "n2iRlS_FT7xe"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " Brackets('())(()')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eEg7fFLDT7uu",
+        "outputId": "68939c2b-232f-4900-bf01-56e76a671b67"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "fish - first try - 25%\n"
+      ],
+      "metadata": {
+        "id": "HZqvo2L4x47Q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fish25(A, B):\n",
+        "    # Implement your solution here\n",
+        "    # A ^ B are non empty\n",
+        "    # fish number 0..N-1\n",
+        "    # run B[i] to B[N-1]\n",
+        "    # check when '10' occurs\n",
+        "    # fishCount -= 1 if A[i] > A[i+1]\n",
+        "    fishDead = []\n",
+        "    for fish in range(0, len(A)):\n",
+        "        if B[fish] == 0:\n",
+        "            # print(f\"skipping fish {fish}\")\n",
+        "            continue\n",
+        "        for i in range(fish+1, len(A)):\n",
+        "            # print('-' * 10)\n",
+        "            if B[i] == 1:\n",
+        "                # print(f\"skipping same dir fish {fish}\")\n",
+        "                continue\n",
+        "            # print(f\"fish is {fish} and next is {i}\")\n",
+        "            # print(f\"A[fish] is {A[fish]} | A[i] is {A[i]}- {fishDead}\")\n",
+        "            if (A[fish] > A[i]) and i not in fishDead:\n",
+        "                fishDead.append(i)\n",
+        "                # print(f\"adding {i} to fishDead\")\n",
+        "            elif (A[fish] < A[i]) and i not in fishDead:\n",
+        "                fishDead.append(fish)\n",
+        "                break\n",
+        "\n",
+        "    fishAlive = len(A) - len(fishDead)\n",
+        "    return fishAlive"
+      ],
+      "metadata": {
+        "id": "O_ugCIS1T7sP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fish100(A,B):\n",
+        "  downfish = []\n",
+        "  fishDead = 0\n",
+        "  for i in range(0, len(A)-1):\n",
+        "    if B[i] == 1:\n",
+        "      downfish.append(A[i])\n",
+        "    else:\n",
+        "      while(len(downfish)!=0):\n",
+        "        if downfish[-1]>A[i]:\n",
+        "          fishDead += 1\n",
+        "          break\n",
+        "        elif downfish[-1]<A[i]:\n",
+        "          downfish.pop()\n",
+        "          fishDead += 1\n",
+        "    return len(A)- fishDead\n"
+      ],
+      "metadata": {
+        "id": "1e3xs0o2T7pX"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "RgE0My6_T7mm"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -1485,7 +1714,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "NAXajXfiKpNw"
+        "id": "7gbVFrs_T7jt"
       },
       "execution_count": null,
       "outputs": []
