--- a/codility_dsa.ipynb
+++ b/codility_dsa.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMesAT4fTNMeHtaB/nMTM2N",
+      "authorship_tag": "ABX9TyMcQnVD89GqY+RgsNXbhZPL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1480,7 +1480,7 @@
       "metadata": {
         "id": "wXJgtK3bKpeq"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1495,7 +1495,7 @@
         },
         "outputId": "aaea1cee-1b3a-4f75-8900-8cc9373594a9"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1536,7 +1536,7 @@
       "metadata": {
         "id": "BWjAqC3aKpYo"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1551,7 +1551,7 @@
         },
         "outputId": "002209ba-1918-4bb9-d453-fd3a97030882"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1600,7 +1600,7 @@
       "metadata": {
         "id": "n2iRlS_FT7xe"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1615,7 +1615,7 @@
         "id": "eEg7fFLDT7uu",
         "outputId": "68939c2b-232f-4900-bf01-56e76a671b67"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1698,12 +1698,52 @@
       "metadata": {
         "id": "1e3xs0o2T7pX"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Nesting\n",
+        "just ()"
+      ],
+      "metadata": {
+        "id": "CnvjTl9nGrQd"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def NestingSimple(S):\n",
+        "  sdict = {'(':1, ')':-1}\n",
+        "  if len(S) == 0:\n",
+        "    return 1 # properly nested hence 1\n",
+        "  # print(sdict)\n",
+        "  if len(S) == 0 and sdict[S[0]] < 0:\n",
+        "    return 1 # not nested\n",
+        "  vector = []\n",
+        "  for i in range(0,len(S)):\n",
+        "    # print(S[i])\n",
+        "    check = sdict[S[i]]\n",
+        "    # print(check)\n",
+        "    if check > 0:\n",
+        "      vector.append(check)\n",
+        "    elif len(vector) == 0 and check < 0:\n",
+        "      return 0 # not nested\n",
+        "    elif check < 0:\n",
+        "      # print(\"reached\")\n",
+        "      # print(S[i])\n",
+        "      if abs(check) == abs(sdict[S[i]]):\n",
+        "        vector.pop()\n",
+        "        # print(\"vector pop\")\n",
+        "      else:\n",
+        "        # print(\"here\")\n",
+        "        return 1\n",
+        "  if len(vector) != 0:\n",
+        "    return 1\n",
+        "\n",
+        "  return 1"
+      ],
       "metadata": {
         "id": "RgE0My6_T7mm"
       },
@@ -1712,11 +1752,479 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "NestingSimple('()(()()(((()())(()()))')"
+      ],
       "metadata": {
-        "id": "7gbVFrs_T7jt"
+        "id": "7gbVFrs_T7jt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3c21bec6-4df9-4fc7-ce1a-3b57d36c7394"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dominator"
+      ],
+      "metadata": {
+        "id": "Yu2NZVoEqXPc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def Dominator(A):\n",
+        "  if len(A) == 0:\n",
+        "    return -1\n",
+        "  if len(A) == 1:\n",
+        "    return 0 # zero position\n",
+        "  B = A.copy()\n",
+        "  B.sort()\n",
+        "  counts = {}\n",
+        "  midCount = len(A)//2\n",
+        "  for i, number in enumerate(A):\n",
+        "    counts[number] = counts.get(number, 0) + 1\n",
+        "\n",
+        "    if counts[number] > midCount:\n",
+        "      return i\n",
+        "  return -1\n"
+      ],
+      "metadata": {
+        "id": "ehfcrz5jHLVe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Dominator([3,3,1,3,3,4,3,8])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RImIkkjUHLSW",
+        "outputId": "3dda62ce-7345-42f8-fba4-98a0c65f25ac"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " EquiLeader"
+      ],
+      "metadata": {
+        "id": "6jkmgqrXP9uk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def EquiLeader(A):\n",
+        "  if len(A) == 1:\n",
+        "    return 0\n",
+        "\n",
+        "  maxHalf = len(A)//2\n",
+        "  leader = -1\n",
+        "  counts = {}\n",
+        "  for i, number in enumerate(A):\n",
+        "    # counts[number] = counts.get(number, 0) + 1\n",
+        "\n",
+        "    counts[number] = A.count(number)\n",
+        "\n",
+        "    if counts[number] > maxHalf:\n",
+        "        leader = i\n",
+        "        break\n",
+        "  # print(f\"leader is {leader}\")\n",
+        "\n",
+        "  # countPosition = []\n",
+        "  # midLeaderCount = counts[number] // 2\n",
+        "\n",
+        "  # print(f\"counts is {counts}\")\n",
+        "  # print(f\"midLeaderCount is {midLeaderCount}\")\n",
+        "\n",
+        "  c = 0\n",
+        "  eqLeader = 0\n",
+        "  totalCount = counts[A[leader]]\n",
+        "  for x,number in enumerate(A):\n",
+        "    if A[x] == A[leader]:\n",
+        "      c += 1\n",
+        "\n",
+        "    print(f\"x is {x} | c is {c} | totalCount is {totalCount}\")\n",
+        "    if (x+1 < 2*c and len(A)-x-1 < 2*(totalCount-c)):\n",
+        "      eqLeader += 1\n",
+        "\n",
+        "  return eqLeader"
+      ],
+      "metadata": {
+        "id": "nht9xWziHLPl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "EquiLeader([4, 4, 2, 5, 3, 4, 4, 4])"
+      ],
+      "metadata": {
+        "id": "zgERhZOWHLMl",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "71764285-b548-4d83-f03a-b6e3304999e5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x is 0 | c is 1 | totalCount is 5\n",
+            "x is 1 | c is 2 | totalCount is 5\n",
+            "x is 2 | c is 2 | totalCount is 5\n",
+            "x is 3 | c is 2 | totalCount is 5\n",
+            "x is 4 | c is 2 | totalCount is 5\n",
+            "x is 5 | c is 3 | totalCount is 5\n",
+            "x is 6 | c is 4 | totalCount is 5\n",
+            "x is 7 | c is 5 | totalCount is 5\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "EquiLeader([3,3,4,5,3,4,3,3])"
+      ],
+      "metadata": {
+        "id": "9ZUraDnSHLJz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f3a15af3-ce63-4949-e415-ee16d63fd525"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This problem can be solved even faster. For each position, we compute the largest sum that ends in that position. If we assume that the maximum sum of a slice ending in position i equals max_ending, then the maximum slice ending in position i+1 equals max(0, max_ending+ a i+1 ).\n",
+        "Maximal slice — O(n).\n",
+        "\n",
+        "This time, the fastest algorithm is the one with the simplest implementation, however it is conceptually more difficult. We have used here a very popular and important technique.\n",
+        "Based on the solution for shorter sequences we can find the solution for longer sequences."
+      ],
+      "metadata": {
+        "id": "rOm-w1AAXrgU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def golden_max_slice(A):\n",
+        "  max_ending = max_slicing = 0\n",
+        "  for a in A:\n",
+        "    max_ending = max(0,max_ending+a)\n",
+        "    max_slicing = max(max_ending, max_slicing)\n",
+        "  return max_slicing"
+      ],
+      "metadata": {
+        "id": "cGvkmFm2QgQf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# you can write to stdout for debugging purposes, e.g.\n",
+        "# print(\"this is a debug message\")\n",
+        "\n",
+        "def MaxProfit(A):\n",
+        "    lastLowset = A[0]\n",
+        "    minBuy = []\n",
+        "    maxSell = []\n",
+        "    maxProfit = []\n",
+        "\n",
+        "    for i,price in enumerate(A):\n",
+        "        print(\"start------\")\n",
+        "        print(f\"lastLowset is {lastLowset} | A[i] is {A[i]}\")\n",
+        "        if lastLowset > A[i]:\n",
+        "            lastLowset = A[i]\n",
+        "            # calculate max value\n",
+        "        else:\n",
+        "            lastHighest = 0\n",
+        "\n",
+        "            for x in range(i+1, len(A)):\n",
+        "                print(f\"lastHighest is {lastHighest} | A[x] is {A[x]}\")\n",
+        "                if lastHighest < A[x] and x != len(A):\n",
+        "                    lastHighest = A[x]\n",
+        "                elif x == len(A):\n",
+        "                    print(\"reached x == len(A)\")\n",
+        "                    profit = A[-1] - lastLowset\n",
+        "                    maxProfit.append(profit)\n",
+        "                    minBuy.append(lastLowset)\n",
+        "                    maxSell.append(lastHighest)\n",
+        "                elif lastHighest > A[x]:\n",
+        "                    profit = lastHighest - lastLowset\n",
+        "                    maxProfit.append(profit)\n",
+        "                    minBuy.append(lastLowset)\n",
+        "                    maxSell.append(lastHighest)\n",
+        "\n",
+        "                    print(f\"maxProfit is {maxProfit}\")\n",
+        "                    print(f\"minBuy is {minBuy}\")\n",
+        "                    print(f\"maxSell is {maxSell}\")\n",
+        "    print(f\"final maxProfit is {maxProfit}\")\n",
+        "    print(f\"final minBuy is {minBuy}\")\n",
+        "    print(f\"final maxSell is {maxSell}\")\n",
+        "\n",
+        "    return (max(maxProfit))\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "W3CqHaAvQgNZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "https://www.youtube.com/watch?v=AOeexLMJ_5w"
+      ],
+      "metadata": {
+        "id": "SuPJ_MnZQgKh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def MaxProfit(A):\n",
+        "  if len(A) == 0:\n",
+        "    return 0\n",
+        "\n",
+        "  lowest = A[0]\n",
+        "  highest = 0\n",
+        "  MTMProfit = 0\n",
+        "\n",
+        "  for i in range(1, len(A)):\n",
+        "    if lowest > A[i]:\n",
+        "      # found new low\n",
+        "      lowest = A[i]\n",
+        "      MTMProfit = 0\n",
+        "    else:\n",
+        "      MTMProfit += (A[i]-A[i-1])\n",
+        "\n",
+        "      if highest < MTMProfit:\n",
+        "        highest = MTMProfit\n",
+        "\n",
+        "  return MTMProfit"
+      ],
+      "metadata": {
+        "id": "hyoGlh0uQgHb"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "MaxProfit([8, 9, 3, 6, 1, 2])"
+      ],
+      "metadata": {
+        "id": "ZPV7H0BXQgEv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b2238d9b-47b5-4eb1-83dc-df7f538cdb9f"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def MaxProfit100(A):\n",
+        "    minimum, maxprofit = float('inf'), 0\n",
+        "    for value in A:\n",
+        "      minimum = min(value, minimum)\n",
+        "      maxprofit = max(value - minimum, maxprofit)\n",
+        "    return maxprofit"
+      ],
+      "metadata": {
+        "id": "5QyXDKl1FLq7"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "MaxProfit100([8, 9, 3, 6, 1, 2])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VJiicITWFLoW",
+        "outputId": "a2345cd1-1863-41d5-bdd2-da553af0162d"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def MaxProfitEff100(A):\n",
+        "  lowest, maxProfitNum = float('inf'), 0\n",
+        "  for price in A:\n",
+        "    lowest = min(price,lowest)\n",
+        "    maxProfitNum = max(price-lowest, maxProfitNum)\n",
+        "  return maxProfitNum"
+      ],
+      "metadata": {
+        "id": "-Wep65ktFLlq"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "MaxProfitEff100([8, 9, 3, 6, 1, 2])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5kuOkcEJFLil",
+        "outputId": "b1bd20bc-710d-4d34-dd9f-91034b0c0e75"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def MaxProfitsolution(A):\n",
+        "    if len(A)==0:\n",
+        "        return 0\n",
+        "\n",
+        "    maxSliceEndingHere = None\n",
+        "    maxSlice = -float('inf')\n",
+        "\n",
+        "    for price in A:\n",
+        "        maxSliceEndingHere = price if maxSliceEndingHere == None else max(price, maxSliceEndingHere+price)\n",
+        "        maxSlice = max(maxSlice, maxSliceEndingHere)\n",
+        "    return maxSlice"
+      ],
+      "metadata": {
+        "id": "g2aELYDPFLfv"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def MaxDoubleSlice(A):\n",
+        "    N, starts, ends = len(A), [0]  * N, [0] * N\n",
+        "    for i in range(1,N-1):\n",
+        "        left, right = i, N-i-1\n",
+        "        starts[left] = max(starts[left - 1] + A[left], 0)\n",
+        "        ends[right] = max(ends[right + 1] + A[right], 0)\n",
+        "    return max((starts[i-1] + ends[i+1] for i in range(1, N-1)))"
+      ],
+      "metadata": {
+        "id": "Hg6PYIowFLci"
+      },
+      "execution_count": 20,
       "outputs": []
     }
   ]
